graph nodes sort fix, invisible columns fix

--- a/src/Grid/css/default.css
+++ b/src/Grid/css/default.css
@@ -268,6 +268,12 @@ tr.grid-selected-row > td {
     overflow: hidden;
 }
 
+.image-container-div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .grid-pager-current {
     width: 3em;
     height: 1.6em;
